--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,8 @@ Revelation changelog
 
 	* made the password strength check more thorough
 
+	* make password warnings handle escape as cancel
+
 2005-02-09  Erik Grinaker <erikg@codepoet.no>
 
 	* make undo actually for for edit actions
