--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,8 @@ Revelation changelog
 
 	* update icons on theme change
 
+	* bump version number to 0.4.1
+
 2005-03-16  Erik Grinaker <erikg@codepoet.no>
 
 	* make io.file_monitor() handle NotSupportedError from gnome-vfs
