don't crash on doubleclick goto

--- a/TODO
+++ b/TODO
@@ -13,6 +13,7 @@ e.4.x:
 - run unit tests on built libraries instead of installed ones
 - only copy/paste entries with keyboard shortcut when tree has focus
   (ctrl-c should copy selected label in dataview when focused)
+  - use gtk.Window.get_focus()
 - bugfix: gnome.libgnome_module_info_get() removed in new gnome-python
 - examine drag/drop undo/redo crashes
 
