--- a/TODO
+++ b/TODO
@@ -12,8 +12,8 @@
 - only copy/paste entries with keyboard shortcut when tree has focus
   (ctrl-c should copy selected label in dataview when focused)
   - use gtk.Window.get_focus()
-- bugfix: gnome.libgnome_module_info_get() removed in new gnome-python
 - examine drag/drop undo/redo crashes
+- use a more complete password dictionary
 
 0.5.x:
 - ensure complete UTF-8 support
