--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,8 @@ Revelation changelog
 
 	* use better stock icons for dialog buttons
 
+	* added a more complete word-list
+
 2005-03-17  Erik Grinaker <erikg@codepoet.no>
 
 	* fix potential crash on quit with some pygtk versions
