check for mkdict/packer under /sbin and /usr/sbin in addition to /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin:/usr/local/sbin:/usr/local/bin:/usr/local/bin:/opt/bin:/usr/i686-pc-linux-gnu/gcc-bin/3.3.5:/opt/ati/bin:/opt/Acrobat5:/opt/stuffit/bin:/opt/blackdown-jdk-1.4.2.01/bin:/opt/blackdown-jdk-1.4.2.01/jre/bin:/usr/qt/3/bin:/usr/kde/3.3/bin:/opt/HelixPlayer:/usr/games/bin:/opt/vmware/bin

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 Revelation changelog
 
+---------------[ xxxx-xx-xx : 0.4.2 ]---------------
+
+2005-03-22  Erik Grinaker <erikg@codepoet.no>
+
+	* check for mkdict/packer under /sbin and /usr/sbin in
+	addition to $PATH
+
+
 ---------------[ 2005-03-21 : 0.4.1 ]---------------
 
 2005-03-21  Erik Grinaker <erikg@codepoet.no>
