--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@ Revelation changelog
 	* check for mkdict/packer under /sbin and /usr/sbin in
 	addition to $PATH
 
+	* don't use gtk.Action.set_sensitive() (API from gtk 2.6)
+
 
 ---------------[ 2005-03-21 : 0.4.1 ]---------------
 
