--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+xxxx-xx-xx: Revelation 0.4.3
+============================
+
+New features:
+- added quit button to unlock file dialog
+
+
 2005-03-22: Revelation 0.4.2
 ============================
 
