--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,8 @@ New features:
 - added quit button to unlock file dialog
 
 Bugfixes:
+- don't wrap gnome_authentication_manager_dialog_is_visible()
+  (only available from libgnomeui-2.7.92)
 - make configure search for new cracklib-format and cracklib-packer
   commands as well as the old mkdict and packer commands
 - stop autolock-timer when manually locking file, to avoid crash when
