--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 Revelation changelog
 
+---------------[ xxxx-xx-xx : 0.4.4 ]---------------
+
+2005-04-06  Erik Grinaker <erikg@codepoet.no>
+
+	* don't crash on missing revelation logo icon
+
+
 ---------------[ 2005-03-31 : 0.4.3 ]---------------
 
 2005-03-31  Erik Grinaker <erikg@codepoet.no>
