--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+2005-04-06: Revelation 0.4.3
+============================
+
+Bugfixes:
+- don't crash on missing revelation logo icon
+
+
 2005-03-31: Revelation 0.4.3
 ============================
 
