--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,9 @@ Bugfixes:
 - removed "New file" item from toolbar
 - don't crash on missing revelation logo icon
 
+Code changes:
+- removed unit tests
+
 
 2005-03-31: Revelation 0.4.3
 ============================
