--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@
 - sorting of the tree
 - string cleanups
 - add binary entropy check to password checker
+- fix drag/drop undo crashes
 - gnome panel applets (account lookup, password generator etc)
   - show complete account tree as a popup-submenu of the applet
   - make library modules more independent, so only a few are imported
