--- a/TODO
+++ b/TODO
@@ -8,6 +8,8 @@
 - string cleanups
 - add binary entropy check to password checker
 - fix drag/drop undo crashes
+- add option for copying password to clipboard on label doubleclick
+- make result label in password checker wrap when text overflows
 - gnome panel applets (account lookup, password generator etc)
   - show complete account tree as a popup-submenu of the applet
   - make library modules more independent, so only a few are imported
