--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.4 ]---------------
 
+2005-06-07  Erik Grinaker <erikg@codepoet.no>
+
+	* applet sets cwd to users homedir on startup
+
 2005-06-06  Erik Grinaker <erikg@codepoet.no>
 
 	* applet automatically reloads file when changed
@@ -47,8 +51,6 @@ Revelation changelog
 	* initial applet file handling
 
 2005-04-14  Erik Grinaker <erikg@codepoet.no>
-
-	* fix syntax error in applet
 
 	* wrote initial user interface
 
