--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@ Revelation changelog
 
 2005-06-27  Erik Grinaker <erikg@codepoet.no>
 
-	* added frame around entry view window, like popup menus
+	* added frame around applet entry view
 
 2005-06-25  Erik Grinaker <erikg@codepoet.no>
 
