--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,7 @@ Bugfixes:
 Code changes:
 - removed unit tests
 - moved Timer class from ui module to data module
+- moved the wrap/ directory to src/wrap/
 
 
 2005-03-31: Revelation 0.4.3
