more applet focus tweaks, and fixed conditional focus wrapping

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,7 +14,7 @@ Revelation changelog
 
 	* made wrapping of panel_applet_request_focus() conditional
 
-	* don't focus applet entry when clicking icon
+	* applet focus tweaks
 
 2005-08-05  Erik Grinaker <erikg@codepoet.no>
 
