--- a/NEWS
+++ b/NEWS
@@ -20,6 +20,7 @@ Bugfixes:
 - the searchbar entry gets focus on startup if shown
 - don't use deprecated gnome.vfs module with gnome-python 2.10
 - properly quote autoconf macro names
+- don't warn about missing config data when schema install worked
 
 Code changes:
 - removed unit tests
