clear gconf cache before re-checking config values

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,8 @@ Revelation changelog
 
 	* return correct status code for config schema install
 
+	* clear gconf cache before re-checking config values
+
 2005-08-05  Erik Grinaker <erikg@codepoet.no>
 
 	* the UIManager wrapper now respects is-important attributes
