--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+xxxx-xx-xx: Revelation 0.4.5
+============================
+
+Bugfixes:
+- fix incorrect magic string in MIME-type entry
+- set correct app version number in datafile header
+
 2005-08-07: Revelation 0.4.4
 ============================
 
