--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@ Revelation changelog
 
 	* set correct app version in datafile header
 
+	* bumped version number to 0.4.5
+
 ---------------[ 2005-08-07 : 0.4.4 ]---------------
 
 2005-08-06  Erik Grinaker <erikg@codepoet.no>
