--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.5 ]---------------
 
+2005-08-17  Erik Grinaker <erikg@codepoet.no>
+
+	* default lock timeout for applet set to 10 minutes
+
 2005-08-09  Erik Grinaker <erikg@codepoet.no>
 
 	* fix incorrect magic string in MIME-type entry
