--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ Bugfixes:
 - fix incorrect magic string in MIME-type entry
 - set correct app version number in datafile header
 - default lock timeout for applet set to 10 minutes
+- don't use unneeded defsfiles when building gnomemisc module
 
 
 2005-08-07: Revelation 0.4.4
