--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@ Revelation changelog
 
 2005-08-22  Erik Grinaker <erikg@codepoet.no>
 
-	* added Password Safe 1.x importer
+	* added Password Safe 1.x import/export
 
 2005-08-17  Erik Grinaker <erikg@codepoet.no>
 
