--- a/NEWS
+++ b/NEWS
@@ -15,7 +15,10 @@ Bugfixes:
 - set correct app version number in datafile header
 - default lock timeout for applet set to 10 minutes
 - don't use unnecessary defsfiles when building gnomemisc module
-- more informative error messages for gnomemisc module errors
+- more informative error messages for gnomemisc module
+
+Code changes:
+- check for necessary python modules at configure-time
 
 
 2005-08-07: Revelation 0.4.4
