--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ xxxx-xx-xx: Revelation 0.4.6
 Bugfixes:
 - don't initialize python modules during configure checks
 - changed button "Edit" to "Update" in edit entry dialog
+- use correct key path for applet show_passwords gconf key
 - remove GNOME_RevelationApplet.server during make clean
 
 2005-08-25: Revelation 0.4.5
