--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ New features:
 Bugfixes:
 - don't initialize python modules during configure checks
 - changed button "Edit" to "Update" in edit entry dialog
+- use full path when starting Revelation from applet
 - use correct key path for applet show_passwords gconf key
 - remove GNOME_RevelationApplet.server during make clean
 
