--- a/NEWS
+++ b/NEWS
@@ -5,10 +5,11 @@ New features:
 - new applet option to show/hide search entry
 
 Bugfixes:
+- fixed drag and drop undo/redo crashes
 - don't initialize python modules during configure checks
 - changed button "Edit" to "Update" in edit entry dialog
 - use full path when starting Revelation from applet
-- use correct key path for applet show_passwords gconf key
+- use correct key path for applet show_passwords gconf schema key
 - remove GNOME_RevelationApplet.server during make clean
 
 2005-08-25: Revelation 0.4.5
