--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,7 @@ Bugfixes:
 - fixed drag and drop undo/redo crashes
 - don't initialize python modules during configure checks
 - strip xml entities from password on clipboard copy or drag/drop
+- fix crash in Password Safe import/export with fields longer than 256 chars
 - changed button "Edit" to "Update" in edit entry dialog
 - use full path when starting Revelation from applet
 - use correct key path for applet show_passwords gconf schema key
