--- a/TODO
+++ b/TODO
@@ -35,10 +35,11 @@
 - recent docs
 - use gnome_authentication_manager_init() from gnome-python when
   available
-- port to gtk+ 2.6 / gnome 2.10
+- port to gtk+ 2.8 / gnome 2.12
   - gtk.AboutDialog
   - ellpisize labels in data view with gtk+ api
   - filechooserbutton
+  - filechooser.set_do_overwrite_confirmation()
 - bugfix: make autolock filter trigger on certain events only
   (needs pygtk bug #156948 to be fixed first)
 - string cleanups
