--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.7 ]---------------
 
+2006-02-02  Erik Grinaker <erikg@codepoet.no>
+
+	* added dependencies to README
+
 2006-01-31  Erik Grinaker <erikg@codepoet.no>
 
 	* don't crash when unlocking file
