--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ xxxx-xx-xx: Revelation 0.4.7
 
 Bugfixes:
 - don't crash when unlocking file
+- build pyc/pyo files correctly when using DESTDIR with make install
 
 
 2006-01-26: Revelation 0.4.6
