--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@ Revelation changelog
 
 	* build pyc/pyo files correctly when using DESTDIR with make install
 
+	* bumped version number to 0.4.7
+
 2006-01-31  Erik Grinaker <erikg@codepoet.no>
 
 	* don't crash when unlocking file
