--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ xxxx-xx-xx: Revelation 0.4.7
 Bugfixes:
 - don't crash when unlocking file
 - build pyc/pyo files correctly when using DESTDIR with make install
+- avoid hanging on missing network mounts when opening file
 
 
 2006-01-26: Revelation 0.4.6
