--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 Revelation changelog
 
+---------------[ xxxx-xx-xx : 0.5.0 ]---------------
+
+2006-02-06  Erik Grinaker <erikg@codepoet.no>
+
+	* don't use deprecated gnome-python modules
+
 ---------------[ 2006-02-06 : 0.4.7 ]---------------
 
 2006-02-03  Erik Grinaker <erikg@codepoet.no>
