--- a/NEWS
+++ b/NEWS
@@ -2,8 +2,7 @@ xxxx-xx-xx: Revelation 0.5.0
 ============================
 
 New features:
-- use gtk.AboutDialog for about dialogs
-- use gtk.FileChooserButton for selecting files
+- ported to gtk+ 2.8 and gnome 2.10
 - cleaned up preferences dialog
 
 Bugfixes:
