--- a/TODO
+++ b/TODO
@@ -33,6 +33,10 @@
 - add import/export from browser (firefox, mozilla, epiphany, galeon)
 - default goto commands shouldn't send password in arg/url
 - searchable notes?
+- don't show password in password checker if password display is off
+- make password drag/drop work with mozilla/firefox
+- "use current" button when choosing autoload file
+- check errors when opening files from dav:// urls
 
 0.6.x:
 - misc command-line arguments
