don't use icons on find next/prev menu items

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+xxxx-xx-xx: Revelation 0.4.8
+============================
+
+Bugfixes:
+- don't use icons on find next/prev menu items
+
+
 2006-02-06: Revelation 0.4.7
 ============================
 
