--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 Revelation changelog
 
+---------------[ xxxx-xx-xx : 0.4.8 ]---------------
+
+2006-05-04  Erik Grinaker <erikg@codepoet.no>
+
+	* don't use icons on find next/prev menu items
+
 ---------------[ 2006-02-06 : 0.4.7 ]---------------
 
 2006-02-03  Erik Grinaker <erikg@codepoet.no>
