--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.5.0 ]---------------
 
+2006-06-02  Erik Grinaker <erikg@codepoet.no>
+
+	* don't crash on missing theme icons [Wade Berrier]
+
 2006-03-07  Erik Grinaker <erikg@codepoet.no>
 
 	* don't use passwords in default goto commands
