--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,7 @@ Bugfixes:
 
 Code changes:
 - depend on pygtk 2.8 and gnome-python 2.10
+- improved build scripts
 - added mman module
 - removed gnomemisc module
 - don't use deprecated gnome-python modules
